stopped table headers from shifting on sort

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,6 +2,8 @@
     margin-left: 0;
     font-family: 'Ubuntu';
 }
+
+html { overflow-y: scroll; }
 /* 
 .flip {
     margin-top: 0;
